--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -30,7 +30,7 @@
 }
 .searchbar{
     display: flex;
-    width: 50vw;
+    width: 50%;
     background:white ;
      border-radius: 0.4vw;
      height: 2.9vw;
